# fastapi-task

./: .env.example  .gitignore  pyproject.toml  pytest.ini  readme.md
docker/: cache.yml
src/: config.py  ioc.py  main.py
src/base/: model.py
src/cache/: decorator.py  redis.py
src/trading/: handlers.py  interfaces.py  models.py  repository.py  service.py
src/trading/schemas/: queries.py  responses.py
tests/: conftest.py
tests/api/: conftest.py  test_api.py
tests/core/: conftest.py  test_repository.py  test_service.py
